# adventofcode2021

./: day1.py  pyproject.toml
